--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-    "name": "helloapp",
-    "version": "1.0.0",
-    "scripts": {
-        "start": "lite-server"
-    },
-    "babel": {
-        "presets": ["latest", "react", "stage-0"]
-    },
-    "devDependencies": {
-        "babel-cli": "^6.24.1",
-        "babel-preset-latest": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "lite-server": "^2.3.0"
-    }
+  "name": "helloapp",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "lite-server"
+  },
+  "babel": {
+    "presets": [
+      "latest",
+      "react",
+      "stage-0"
+    ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "lite-server": "^2.3.0",
+    "webpack": "^2.4.1"
+  },
+  "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  }
 }
